--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ fraud-detection-syn-dataset.csv
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-package-lock.json
+/*package-lock.json
 /node_modules
 /.pnp
 .pnp.js
