--- a/server-side/package.json
+++ b/server-side/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "flask": "python flask_server.py"
   },
   "type": "module",
   "keywords": [],
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
+    "npm-run-all": "^4.1.5",
     "validator": "^13.9.0"
   }
 }
