--- a/client-side/package.json
+++ b/client-side/package.json
@@ -14,12 +14,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "gapi-script": "^1.2.0",
     "js-cookie": "^3.0.1",
     "mdb-react-ui-kit": "^6.0.0",
     "mdbootstrap": "^4.20.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
