--- a/client-side/package.json
+++ b/client-side/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.3",
     "gapi-script": "^1.2.0",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.0.0",
     "mdbootstrap": "^4.20.0",
     "react": "^18.2.0",
