--- a/server-side/package.json
+++ b/server-side/package.json
@@ -24,6 +24,7 @@
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "jwt-check-expiration": "^1.0.5",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
